--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
       >。
     </div>
     <footer>底部</footer>
-    <script src="../src/index.js"></script>
+    <script src="../src/main.js"></script>
   </body>
 </html>
