--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
         >**node的一个第三方模块包, 用于分析，打包代码的**</span
       >。
     </div>
+
+    <div id="swiper">轮播图</div>
+    <div>tabs标签页</div>
+    <i class="iconfont icon-weixin"></i>
     <footer>底部</footer>
     <script src="../src/main.js"></script>
   </body>
